# hr_interview_agent

./: .env.example  .gitignore  README.md  docker-compose.apps.yml  docker-compose.yml
ai-agent/: Dockerfile  pyproject.toml
ai-agent/mcp/servers/: README.md
ai-agent/src/hr_interview_agent/: __init__.py  config.py  worker.py
ai-agent/src/hr_interview_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ai-agent/src/hr_interview_agent/graph/: scorer.py  state.py
ai-agent/src/hr_interview_agent/mcp/: tools.py
ai-agent/src/hr_interview_agent/rag/: store.py
ai-agent/src/hr_interview_agent/temporal/: activities.py  workflows.py
backend/: Dockerfile  pom.xml  pyproject.toml
backend/src/hr_interview_backend/: __init__.py  config.py  database.py  main.py  models.py  schemas.py  temporal_service.py
backend/src/hr_interview_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/src/hr_interview_backend/routers/: rag.py  sessions.py
backend/src/hr_interview_backend/services/: interview_service.py  rag_service.py
backend/src/main/java/com/samsung/hr/: HrInterviewApplication.java
backend/src/main/java/com/samsung/hr/config/: TemporalConfig.java  WebConfig.java
backend/src/main/java/com/samsung/hr/domain/: InterviewSession.java  RagDocument.java  ScoreTurn.java
backend/src/main/java/com/samsung/hr/dto/: CreateSessionRequest.java  ScoreRequest.java  ScoreTurnResponse.java  SessionResponse.java
backend/src/main/java/com/samsung/hr/repository/: RagDocumentRepository.java  (+2 more)
backend/src/main/resources/: application.yml
(+27 files in other folders)
